--- a/SimTECH/SimTECH/Pages/Racing/GapChartDialog.razor
+++ b/SimTECH/SimTECH/Pages/Racing/GapChartDialog.razor
@@ -1,49 +1,47 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText Typo="Typo.h5">
-            <MudIcon Icon="@Icons.Material.Filled.SsidChart" Class="mr-3 mb-n1"></MudIcon>
-            Gapper race chart
-        </MudText>
+        <MudIcon Icon="@Icons.Material.Filled.SsidChart" Class="mr-3 mb-n1" />
+        <MudText Typo="Typo.h5">Gapper race chart</MudText>
     </TitleContent>
     <DialogContent>
-        <MudContainer Class="pa-4 mud-width-full mud-height-full" Style="min-width: 800px; min-height: 700px">
+        <MudPaper MinHeight="700px" MinWidth="800px" Class="pa-4">
             @if (!loading)
             {
                 <ApexCharts.ApexChart TItem="DataPoint" Title="Gaps to leader" Options="@options" Height="800" Width="@("100%")">
-                    @foreach (var driver in DataSets)
+                    @foreach (var driver in dataSets)
                     {
                         <ApexCharts.ApexPointSeries TItem="DataPoint"
-                                            Items="@driver.DataPoints"
-                                            Name="@driver.Label"
-                                            SeriesType="ApexCharts.SeriesType.Line"
-                                            XValue="@(e => e.XData)"
-                                            YValue="@(e => e.YData)"
-                                            OrderBy="e => e.X"
-                                            Stroke="@driver.Stroke" />
+                                                    Items="@driver.DataPoints"
+                                                    Name="@driver.Label"
+                                                    SeriesType="ApexCharts.SeriesType.Line"
+                                                    XValue="e => e.XData"
+                                                    YValue="e => e.YData"
+                                                    OrderBy="e => e.X"
+                                                    Stroke="@driver.Stroke" />
                     }
                 </ApexCharts.ApexChart>
             }
-        </MudContainer>
+        </MudPaper>
     </DialogContent>
 </MudDialog>
 
 @code {
     [CascadingParameter] protected MudDialogInstance? ChartDialog { get; set; }
-    [Parameter, EditorRequired] public List<RaceDriver> Drivers { get; set; }
+    [Parameter, EditorRequired] public List<RaceDriver> RaceDrivers { get; set; }
 
     ApexCharts.ApexChartOptions<DataPoint> options = Constants.ChartOptionsDefault;
-    List<DataSet> DataSets = new();
+    List<DataSet> dataSets = new();
 
     bool loading = true;
 
     protected override void OnInitialized()
     {
-        var leaderScores = Drivers.First(e => e.Position == 1).LapScores;
+        var leaderScores = RaceDrivers.First(e => e.Position == 1).LapScores;
         var amountCalculated = leaderScores.Count;
 
-        var seenTeamIdentifiers = new List<long>(Drivers.Count);
+        var seenTeamIdentifiers = new List<long>(RaceDrivers.Count);
 
-        foreach (var driver in Drivers)
+        foreach (var driver in RaceDrivers)
         {
             var dataSet = new DataSet { Label = driver.FullName };
 
@@ -63,7 +61,7 @@
             dataSet.Stroke = new ApexCharts.SeriesStroke { Color = driver.Colour, DashSpace = (2 * sameSeenTeams), Width = 3 };
 
             seenTeamIdentifiers.Add(driver.SeasonTeamId);
-            DataSets.Add(dataSet);
+            dataSets.Add(dataSet);
         }
 
         loading = false;
